src/test/ui/issues/issue-11844.rs
#![feature(box_syntax)]

fn main() {
    let a = Some(box 1);
    match a {
        Ok(a) => //~ ERROR: mismatched types
            println!("{}",a),
        None => panic!()
    }
}
